--- a/pages/services.html
+++ b/pages/services.html
@@ -27,7 +27,7 @@
         <li>splung Training</li>
     </ol>
 
-<a href="/index.html">Go Back Home</a>
+<a href="../index.html">Go Back Home</a>
 
 </body>
 </html>
