--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
 
 <p>Capacity Bay is a dynamic tech training community offering a diverse range of courses, workshops, and resources to empower individuals in their tech journeys. With a focus on fostering skill development and knowledge sharing, Capacity Bay provides a supportive environment for beginners and professionals alike to enhance their expertise in various tech domains. Through interactive learning experiences and expert-led sessions, members can stay updated with the latest trends and technologies. Whether aspiring to enter the tech industry or seeking to level up their skills, Capacity Bay serves as a valuable hub for continuous growth and collaboration in the ever-evolving world of technology.</p>
 
-<a href="/index.html">Go Back Home</a>
+<a href="../index.html">Go Back Home</a>
 
 </body>
 </html>
